Additional content added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 </nav>
 
 <main> 
+
+<img src="LoFive.jpg" alt=""/>
+<h1>Introducing LoFive!</h1>
+<p>LoFive is a tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over. Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
+<div><img src="App-Store.png" alt="" width="20" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"/></div>
+
+
+<h1>Contact</h1>
+<h2>Email</h2>
+<p>alternate.bit.company@gmail.com</p>
+<h2>Follow us on Twitter</h2>
+
 <div><a href="https://twitter.com/AlternateBit" class="fa fa-twitter"></a></div>
 
 </main>
