--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,6 +16,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
+
+	<script src="https://kit.fontawesome.com/7f46e861de.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -26,14 +32,34 @@
 </header>
 
 
+
 <main>
 
-<a><img class="hero-img" src="LoFive.jpg" alt="" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"/></a>
+	<a></a>
 
-<h1>LoFive</h1>
-<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over. Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
 
-<div><a href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"><img class="app-store-logo" src="App-Store.png" alt="" width="20" /></a></div>
+
+	<div>
+
+<div class="your-class">
+  <div>
+		<img class="hero-img" src="LoFive.jpg" alt=""/>
+
+		<div><div class="shape"></div>
+		<h1>LoFive</h1>
+		<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over. Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
+	  </div>
+		<a href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"><img class="app-store-logo" src="App-Store.png" alt="" width="20" /></a></div>
+		<div>
+			<img class="hero-img" src="" alt=""/>
+		  <h1>Project Swirl</h1>
+		</div>
+		<div>
+			<img class="hero-img" src="" alt=""/>
+		  <h1>Project Hoot</h1>
+		</div>
+</div>
+
 
 </main>
 
@@ -44,8 +70,9 @@
 
 <footer class="subfooter">
 	<div class="footer-parent">
-		<div class="footer-elements">FOLLOW</div>
-	<div class="footer-elements">CONTACT <p>alternate.bit.company@gmail.com</p></div>
+	<div class="footer-elements">FOLLOW <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a></div>
+
+	<div class="footer-elements">ALTERNATE.BIT.COMPANY@GMAIL.COM</div>
 	<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">PRIVACY POLICY</a></div>
 </div>
 </footer>
@@ -82,7 +109,21 @@ $(document).ready(function() {
 }); //closes .ready
 </script>
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+      $('.your-class').slick({
+				dots: true,
+			  infinite: true,
+			  speed: 500,
+			  fade: true,
+			  cssEase: 'linear'
+      });
+    });
+  </script>
 
 </body>
-
 </html>
