--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <div id="container">
 
-<header><h1><img class="company-logo" src="rectangle-logo.jpg" alt=""/></h1>
+<header><img class="company-logo" src="rectangle-logo.jpg" alt=""/>
 </header>
 
 
@@ -44,19 +44,22 @@
 <div class="your-class">
   <div>
 		<img class="hero-img" src="LoFive.jpg" alt=""/>
-
-		<div><div class="shape"></div>
+	  <div>
 		<h1>LoFive</h1>
 		<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over. Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
 	  </div>
 		<a href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"><img class="app-store-logo" src="App-Store.png" alt="" width="20" /></a></div>
 		<div>
-			<img class="hero-img" src="" alt=""/>
+			<img class="hero-img" src="ProjectSwirl.jpg" alt=""/>
 		  <h1>Project Swirl</h1>
+			<p class="description">A 2D Metroidvania game following a barista’s quest to defend their metropolitan area from an enchanted army of beverage-based enemies with the help of a magical goblet that turns beverage mixtures into attacks.</p>
+			<a><img class="in-img" src="In.jpg" alt="" width="20" /></a>
 		</div>
 		<div>
-			<img class="hero-img" src="" alt=""/>
+			<img class="hero-img" src="ProjectHoot.jpg" alt=""/>
 		  <h1>Project Hoot</h1>
+			<p class="description">A light-weight online co-op platformer where you play as either a cat that dreams of flying or an owl who wants a best friend.</p>
+			<a><img class="in-img" src="In.jpg" alt="" width="20" /></a>
 		</div>
 </div>
 
