Game descriptions and resize in progesss img

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 		<img class="hero-img" src="LoFive.jpg" alt=""/>
 	  <div>
 		<h1>LoFive</h1>
-		<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over. Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
+		<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over! Filling rows and columns lower the tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
 	  </div>
 		<a href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8"><img class="app-store-logo" src="App-Store.png" alt="" width="20" /></a></div>
 		<div>
 			<img class="hero-img" src="ProjectSwirl.jpg" alt=""/>
 		  <h1>Project Swirl</h1>
-			<p class="description">A 2D Metroidvania game following a barista’s quest to defend their metropolitan area from an enchanted army of beverage-based enemies with the help of a magical goblet that turns beverage mixtures into attacks.</p>
+			<p class="description">Having to drop out of Alchemy College to keep your family’s coffee shop from going out of business? Sucks. Awakening an ancient evil and defending the metropolitan area from an enchanted army of beverage monsters? Really sucks. Collect, mix, discover, and unleash the power of beverages in this quirky and nostalgic top-down action adventure.</p>
 			<a><img class="in-img" src="In.jpg" alt="" width="20" /></a>
 		</div>
 		<div>
 			<img class="hero-img" src="ProjectHoot.jpg" alt=""/>
 		  <h1>Project Hoot</h1>
-			<p class="description">A light-weight online co-op platformer where you play as either a cat that dreams of flying or an owl who wants a best friend.</p>
+			<p class="description">Play as Twinkle the Cat or Talon the Owl in this light-weight online co-op platformer where you work together to reach for the stars!</p>
 			<a><img class="in-img" src="In.jpg" alt="" width="20" /></a>
 		</div>
 </div>
