--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<div class="footer-elements">FOLLOW <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
 			</div>
 
-			<div class="footer-elements"><a href="mailto:" ALTERNATE.BIT.COMPANY@GMAIL.COM">CONTACT</a></div>
+			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM"">CONTACT</a></div>
 			<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">PRIVACY POLICY</a></div>
 		</div>
 	</footer>
