--- a/index.html
+++ b/index.html
@@ -1,58 +1,35 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="description" content="">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<title>Alternate Bit</title>
-
 	<link rel="stylesheet" href="stylesheet.css">
-
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css" />
 	<link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css" />
-
 	<script src="https://kit.fontawesome.com/7f46e861de.js" crossorigin="anonymous"></script>
 </head>
 
-
 <body>
-
 	<div id="container">
-
-		<header><img class="company-logo" src="rectangle-logo.jpg" alt="" />
+		<header>
+			<img class="company-logo" src="rectangle-logo.jpg" alt="" />
 		</header>
-
-
-
-		<main>
-
-			<a></a>
-
-
-
+		<main><a></a>
 			<div>
-
 				<div class="your-class">
 					<div>
-
-
 						<div class="lofive-container">
 							<img class="hero-img" src="LoFive.jpg" alt="" />
 							<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
-								<img class="app-store-logo" src="App-Store.png" alt="" width="20" />
+								<img class="app-store-logo" src="App-Store.png" alt="" />
 							</a>
 						</div>
-
-
 						<div>
 							<h1>LoFive</h1>
 							<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over! Filling rows and columns lower the
@@ -71,21 +48,15 @@
 						<p class="description">Play as Twinkle the Cat or Talon the Owl in this light-weight online co-op platformer where you work together to reach for the stars!</p>
 					</div>
 				</div>
-
-
 		</main>
-
-
-
-	</div><!-- close "container" -->
-
+	</div>
 
 	<footer class="subfooter">
 		<div class="footer-parent">
 			<div class="footer-elements">FOLLOW <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
 			</div>
 
-			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM"">CONTACT</a></div>
+			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM">CONTACT</a></div>
 			<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">PRIVACY POLICY</a></div>
 		</div>
 	</footer>
@@ -96,9 +67,6 @@
 
 	<!-- Link to jQuery: Google CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-	<!-- Write your jQuery here -->
-
 	<script>
 		$(document).ready(function() {
 
@@ -121,11 +89,9 @@
 
 		}); //closes .ready
 	</script>
-
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('.your-class').slick({
@@ -136,7 +102,6 @@
 			});
 		});
 	</script>
-
 </body>
 
 </html>
