--- a/index.html
+++ b/index.html
@@ -17,47 +17,71 @@
 
 <body>
 	<div id="container">
-		<header>
-			<img class="company-logo" src="rectangle-logo.jpg" alt="" />
-		</header>
+
 		<main><a></a>
-			<div>
+			<div class="hero-banner">
+				<img class="company-logo" src="rectangle-logo.jpg" alt="" />
+
+				<div class="desktop-blurb"><h3>An indie game studio based in Chicago</h3>
+				<h4>Creators of puzzle game, LoFive.</h4>
+				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
+					<img class="app-store-logo" src="App-Store.png" alt="" />
+				</a></div>
+
+			<div class="splash">
+			</div>
+		</div>
+		<div class="mobile-blurb"><h3>An indie game studio based in Chicago</h3>
+		<h4>Creators of puzzle game, LoFive.</h4>
+		<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
+			<img class="app-store-logo" src="App-Store.png" alt="" />
+		</a></div>
+		
+			<div class="feature-container">
+				<h1>Our Games</h1>
 				<div class="your-class">
 					<div>
 						<div class="lofive-container">
 							<img class="hero-img" src="LoFive.jpg" alt="" />
-							<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
-								<img class="app-store-logo" src="App-Store.png" alt="" />
-							</a>
 						</div>
 						<div>
-							<h1>LoFive</h1>
+							<h2>LoFive</h2>
 							<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over! Filling rows and columns lower the
 								tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
 						</div>
 					</div>
 					<div>
 						<img class="hero-img" src="ProjectSwirl.jpg" alt="" />
-						<h1>Project Swirl</h1>
+						<h2>Project Swirl</h2>
 						<p class="description">Having to drop out of Alchemy College to keep your family’s coffee shop from going out of business? Sucks. Awakening an ancient evil and defending the metropolitan area from an enchanted army of beverage monsters?
 							Really sucks. Collect, mix, discover, and unleash the power of beverages in this quirky and nostalgic top-down action adventure.</p>
 					</div>
 					<div>
 						<img class="hero-img" src="ProjectHoot.jpg" alt="" />
-						<h1>Project Hoot</h1>
+						<h2>Project Hoot</h2>
 						<p class="description">Play as Twinkle the Cat or Talon the Owl in this light-weight online co-op platformer where you work together to reach for the stars!</p>
 					</div>
 				</div>
-		</main>
+
+				<div class="follow-twitter">
+					<h5>Let's connect!</h5>
+					<p>Keep up with the latest on our game dev journey.</p>
+					<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				</div>
+			</div>
+
+
+
+</main>
 	</div>
 
 	<footer class="subfooter">
 		<div class="footer-parent">
-			<div class="footer-elements">FOLLOW <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
+			<div class="footer-elements">Follow <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
 			</div>
 
-			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM">CONTACT</a></div>
-			<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">PRIVACY POLICY</a></div>
+			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM">Contact</a></div>
+			<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">Privacy Policy</a></div>
 		</div>
 	</footer>
 
