--- a/index.html
+++ b/index.html
@@ -22,21 +22,26 @@
 			<div class="hero-banner">
 				<img class="company-logo" src="rectangle-logo.jpg" alt="" />
 
-				<div class="desktop-blurb"><h3>An indie game studio based in Chicago</h3>
+				<div class="desktop-blurb">
+					<h3>An indie game studio based in Chicago</h3>
+					<h4>Creators of puzzle game, LoFive.</h4>
+					<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
+						<img class="app-store-logo" src="App-Store.png" alt="" />
+					</a>
+				</div>
+
+				<div class="splash">
+				</div>
+				<img class="devices" src="devices.png" alt="" />
+			</div>
+			<div class="mobile-blurb">
+				<h3>An indie game studio based in Chicago</h3>
 				<h4>Creators of puzzle game, LoFive.</h4>
 				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
 					<img class="app-store-logo" src="App-Store.png" alt="" />
-				</a></div>
-
-			<div class="splash">
+				</a>
 			</div>
-		</div>
-		<div class="mobile-blurb"><h3>An indie game studio based in Chicago</h3>
-		<h4>Creators of puzzle game, LoFive.</h4>
-		<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
-			<img class="app-store-logo" src="App-Store.png" alt="" />
-		</a></div>
-		
+
 			<div class="feature-container">
 				<h1>Our Games</h1>
 				<div class="your-class">
@@ -66,13 +71,14 @@
 				<div class="follow-twitter">
 					<h5>Let's connect!</h5>
 					<p>Keep up with the latest on our game dev journey.</p>
-					<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
 
 
 
-</main>
+		</main>
 	</div>
 
 	<footer class="subfooter">
