--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
 				</div>
 
 				<div class="follow-twitter">
-					<h5>Let's connect!</h5>
-					<p>Keep up with the latest on our game dev journey.</p>
-					<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a>
+					<div class="follow-text">
+						<h5>Let's connect!</h5>
+						<p>Keep up with the latest on our game dev journey.</p>
+					</div>
+					<div align="center">
+						<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button tw-align-center" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a>
+					</div>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
@@ -82,17 +86,19 @@
 	</div>
 
 	<footer class="subfooter">
-		<div class="footer-parent">
-			<div class="footer-elements">Follow <a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
-			</div>
-
+		<div class="footer-parent float-center">
 			<div class="footer-elements"><a href="mailto:ALTERNATE.BIT.COMPANY@GMAIL.COM">Contact</a></div>
 			<div class="footer-elements"><a href="https://alternatebitgames.com/privacy_policy.html">Privacy Policy</a></div>
 		</div>
-	</footer>
-
-	<footer>
-		<p>&#169; Alternate Bit 2020</p>
+		<div class="footer-parent float-right">
+			<div class="footer-elements"><a href="https://twitter.com/AlternateBit"><i class="fab fa-twitter"></i></a> <a href="https://www.instagram.com/alternatebit/?utm_source=ig_embed&utm_campaign=loading"><i class="fab fa-instagram"></i></a>
+			</div>
+		</div>
+		<div class="footer-parent float-left">
+			<div class="footer-elements">
+				<p>&#169; Alternate Bit 2020</p>
+			</div>
+		</div>
 	</footer>
 
 	<!-- Link to jQuery: Google CDN -->
