--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
 </head>
 
 <body>
-	<div id="container">
+	<div class="container" id="container">
+		<main>
 
-		<main><a></a>
+			<a></a>
 			<div class="hero-banner">
 				<img class="company-logo" src="rectangle-logo.jpg" alt="" />
 
 				<div class="desktop-blurb">
-					<h3>An indie game studio based in Chicago</h3>
+					<h3>An Indie Game Studio based in Chicago</h3>
 					<h4>Creators of puzzle game, LoFive.</h4>
 					<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
 						<img class="app-store-logo" src="App-Store.png" alt="" />
 					</a>
 				</div>
 
-				<div class="splash">
+				<div class="splash dots">
 				</div>
 				<img class="devices" src="devices.png" alt="" />
 			</div>
 			<div class="mobile-blurb">
-				<h3>An indie game studio based in Chicago</h3>
+				<h3>An Indie Game Studio based in Chicago</h3>
 				<h4>Creators of puzzle game, LoFive.</h4>
 				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
 					<img class="app-store-logo" src="App-Store.png" alt="" />
@@ -44,6 +45,108 @@
 
 			<div class="feature-container">
 				<h1>Our Games</h1>
+
+
+				<table class="featured-table">
+					<tr>
+						<td class="featured-element">
+							<div class="image"><img src="StayBelow.png" alt="" /></div>
+						</td>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Stay below five or it’s game over</h2>
+									<p>Play by placing tiles on the grid to earn points. Stacking tiles adds the numbers while filling rows and columns subtracts.</p>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Themes to fit your vibe</h2>
+									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+								</div>
+							</div>
+						</td>
+						<td class="featured-element">
+							<div class="image"><img src="Themes.png" alt="" /></div>
+						</td>
+					</tr>
+					<tr>
+						<td class="featured-element">
+							<div class="image"><img src="Turbo.png" alt="" /></div>
+						</td>
+						<td class="featured-element">
+							<div class="text">
+								<div class="text-content">
+									<h2>Themes to fit your vibe</h2>
+									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr></tr>
+					<tr></tr>
+					<tr></tr>
+				</table>
+
+				<div class="row">
+					<div class="image"><img src="StayBelow.png" alt="" /></div>
+					<div class="text">
+						<div class="text-content">
+							<h2>Stay below five or it’s game over</h2>
+							<p>Play by placing tiles on the grid to earn points. Stacking tiles adds the numbers while filling rows and columns subtracts.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="image"><img src="Themes.png" alt="" /></div>
+					<div class="text">
+						<div class="text-content">
+							<h2>Themes to fit your vibe</h2>
+							<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="image"><img src="Turbo.png" alt="" /></div>
+					<div class="text">
+						<div class="text-content">
+							<h2>Race against the clock</h2>
+							<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="image"><img src="Turbo.png" alt="" /></div>
+					<div class="text">
+						<div class="text-content">
+							<h2>Race against the clock</h2>
+							<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="image"><img src="Unread.png" alt="" /></div>
+					<div class="text">
+						<h3>In development</h3>
+						<h2>Unread</h2>
+						<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="image"><img src="Swirl.png" alt="" /></div>
+					<div class="text">
+						<div class="text-content">
+							<h3>In development</h3>
+							<h2>Project Swirl</h2>
+							<p>Collect, mix, discover, and unleash the power of beverages in this top-down action roguelite.</p>
+						</div>
+					</div>
+				</div>
+
 				<div class="your-class">
 					<div>
 						<div class="lofive-container">
