browser and ipad

--- a/index.html
+++ b/index.html
@@ -16,43 +16,28 @@
 </head>
 
 <body>
-	<div class="container" id="container">
-		<main>
 
-			<a></a>
-			<div class="hero-banner">
-				<img class="company-logo" src="rectangle-logo.jpg" alt="" />
+	<main>
 
-				<div class="desktop-blurb">
-					<h3>An Indie Game Studio based in Chicago</h3>
-					<h4>Creators of puzzle game, LoFive.</h4>
-					<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
-						<img class="app-store-logo" src="App-Store.png" alt="" />
-					</a>
-				</div>
+		<img class="company-logo" src="logo.png" alt="" />
 
-				<div class="splash dots">
-				</div>
-				<img class="devices" src="devices.png" alt="" />
-			</div>
-			<div class="mobile-blurb">
-				<h3>An Indie Game Studio based in Chicago</h3>
-				<h4>Creators of puzzle game, LoFive.</h4>
+
+		<div class="header-container">
+			<div class="container">
+				<img src="SplashImage.png" alt="" />
+				<h1>Lo<strong>Five</strong></h1>
+				<p>Puzzles. Chill. LoFi.</p>
 				<a class="app-store-link" href="https://itunes.apple.com/us/app/lofive/id1413993120?mt=8">
 					<img class="app-store-logo" src="App-Store.png" alt="" />
 				</a>
 			</div>
+		</div>
 
-			<div class="feature-container">
-				<h1>Our Games</h1>
-
-
+		<div class="feature-container">
+			<div class="container">
 				<table class="featured-table">
 					<tr>
-						<td class="featured-element">
-							<div class="image"><img src="StayBelow.png" alt="" /></div>
-						</td>
-						<td class="featured-element">
+						<td class="featured-element featured-left">
 							<div class="text">
 								<div class="text-content">
 									<h2>Stay below five or it’s game over</h2>
@@ -60,25 +45,19 @@
 								</div>
 							</div>
 						</td>
+						<td class="divider">
+						</td>
+						<td class="featured-element featured-right">
+							<div class="image"><img src="StayBelow.png" alt="" /></div>
+						</td>
 					</tr>
 					<tr>
-						<td class="featured-element">
-							<div class="text">
-								<div class="text-content">
-									<h2>Themes to fit your vibe</h2>
-									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
-								</div>
-							</div>
-						</td>
-						<td class="featured-element">
+						<td class="featured-element featured-left">
 							<div class="image"><img src="Themes.png" alt="" /></div>
 						</td>
-					</tr>
-					<tr>
-						<td class="featured-element">
-							<div class="image"><img src="Turbo.png" alt="" /></div>
+						<td class="divider">
 						</td>
-						<td class="featured-element">
+						<td class="featured-element featured-left">
 							<div class="text">
 								<div class="text-content">
 									<h2>Themes to fit your vibe</h2>
@@ -87,106 +66,79 @@
 							</div>
 						</td>
 					</tr>
-					<tr></tr>
-					<tr></tr>
-					<tr></tr>
+					<tr>
+						<td class="featured-element featured-left">
+							<div class="text">
+								<div class="text-content">
+									<h2>Themes to fit your vibe</h2>
+									<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
+								</div>
+							</div>
+						</td>
+						<td class="divider">
+						</td>
+						<td class="featured-element featured-right">
+							<div class="image"><img src="Turbo.png" alt="" /></div>
+						</td>
+					</tr>
 				</table>
+			</div>
+		</div>
 
-				<div class="row">
-					<div class="image"><img src="StayBelow.png" alt="" /></div>
-					<div class="text">
-						<div class="text-content">
-							<h2>Stay below five or it’s game over</h2>
-							<p>Play by placing tiles on the grid to earn points. Stacking tiles adds the numbers while filling rows and columns subtracts.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="image"><img src="Themes.png" alt="" /></div>
-					<div class="text">
-						<div class="text-content">
-							<h2>Themes to fit your vibe</h2>
-							<p>Choose from color palettes and unlock more themes by reaching new high scores.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="image"><img src="Turbo.png" alt="" /></div>
-					<div class="text">
-						<div class="text-content">
-							<h2>Race against the clock</h2>
-							<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="image"><img src="Turbo.png" alt="" /></div>
-					<div class="text">
-						<div class="text-content">
-							<h2>Race against the clock</h2>
-							<p>Switch to Turbo Mode and place your tile before the screen fills up to get 2x points!</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="image"><img src="Unread.png" alt="" /></div>
-					<div class="text">
-						<h3>In development</h3>
-						<h2>Unread</h2>
-						<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="image"><img src="Swirl.png" alt="" /></div>
-					<div class="text">
-						<div class="text-content">
-							<h3>In development</h3>
-							<h2>Project Swirl</h2>
-							<p>Collect, mix, discover, and unleash the power of beverages in this top-down action roguelite.</p>
-						</div>
-					</div>
-				</div>
+		<div class="upcoming-container">
+			<div class="container">
+				<table class="featured-table">
+					<tbody>
+						<tr>
+							<td class="featured-element featured-left">
+								<div class="upcoming-image"><img src="unread.png" alt="" /></div>
+							</td>
+							<td class="divider">
+							</td>
+							<td class="featured-element featured-left">
+								<div class="text">
+									<div class="text-content">
+										<h3>In Development</h3>
+										<h2>Unread</h2>
+										<p>Reawaken a digital messenger from the early World Wide Web a journey to deliver an important message, uncovering a curious series of unread messages along the way in this narrative driven puzzle mystery.</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td class="featured-element featured-left">
+								<div class="text">
+									<div class="text-content">
+										<h3>In Development</h3>
+										<h2>Project Swirl</h2>
+										<p>Collect, mix, discover, and unleash the power of beverages in this top-down action roguelite.</p>
+									</div>
+								</div>
+							</td>
+							<td class="divider">
+							</td>
+							<td class="featured-element featured-right">
+								<div class="upcoming-image"><img src="swirl.png" alt="" /></div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 
-				<div class="your-class">
-					<div>
-						<div class="lofive-container">
-							<img class="hero-img" src="LoFive.jpg" alt="" />
-						</div>
-						<div>
-							<h2>LoFive</h2>
-							<p class="description">A tile game played by placing tiles onto a grid to earn points. By stacking tiles, the amounts on the tiles are added. These amounts must stay below 5, or else it’s game over! Filling rows and columns lower the
-								tile values and earn more points. Players can unlock new color themes by reaching high scores.</p>
-						</div>
-					</div>
-					<div>
-						<img class="hero-img" src="ProjectSwirl.jpg" alt="" />
-						<h2>Project Swirl</h2>
-						<p class="description">Having to drop out of Alchemy College to keep your family’s coffee shop from going out of business? Sucks. Awakening an ancient evil and defending the metropolitan area from an enchanted army of beverage monsters?
-							Really sucks. Collect, mix, discover, and unleash the power of beverages in this quirky and nostalgic top-down action adventure.</p>
-					</div>
-					<div>
-						<img class="hero-img" src="ProjectHoot.jpg" alt="" />
-						<h2>Project Hoot</h2>
-						<p class="description">Play as Twinkle the Cat or Talon the Owl in this light-weight online co-op platformer where you work together to reach for the stars!</p>
-					</div>
-				</div>
-
-				<div class="follow-twitter">
-					<div class="follow-text">
-						<h5>Let's connect!</h5>
-						<p>Keep up with the latest on our game dev journey.</p>
-					</div>
+		<div class="footer-container">
+			<div class="container">
+				<div class="footer-barrier">
+					<h5>Keep up with the latest on our game dev journey.</h5>
 					<div align="center">
 						<a href="https://twitter.com/AlternateBit?ref_src=twsrc%5Etfw" class="twitter-follow-button tw-align-center" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @AlternateBit</a>
 					</div>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 			</div>
+		</div>
 
-
-
-		</main>
-	</div>
+	</main>
 
 	<footer class="subfooter">
 		<div class="footer-parent float-center">
